<resources>
    <string name="xuber_services">Services</string>
    <string name="dummy_sub_category_item">sub category item</string>
    <string name="dummy_subservice_name">Installation</string>
    <string name="xuber_schedule">Schedule</string>
    <string name="book_now">Book now</string>
    <string name="select_location">Select location</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="home">Home</string>
    <string name="text_placeholder">Xx,. Xx,. Xx,.</string>
    <string name="work">Work</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_permission_rationale">Location Permission is needed to get current location</string>
    <string name="service_providers">Service Providers</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="dummy_name">Grom jerry</string>
    <string name="dummy_distance">2km away</string>
    <string name="dummy_star_rating">4.5</string>
    <string name="dummy_provider_base_fare">$10 hour</string>
    <string name="reviews">Reviews</string>
    <string name="lorum"><![CDATA[<string name=\"lorum\">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>]]></string>
    <string name="search_location">Search location</string>
    <string name="go">GO</string>
    <string name="saved_location">Saved Location</string>
    <string name="no_saved_location">No saved locations</string>
    <string name="xuber_schedule_your_date_and_time">Schedule your Date and Time</string>
    <string name="xuber_schedule_date">Schedule Date</string>
    <string name="xuber_choose_date">Choose Date</string>
    <string name="xuber_schedule_time">Schedule Time</string>
    <string name="xuber_choose_time">Choose Time</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="no_nearby_providers">No Nearby Providers</string>
    <string name="description">Description</string>
    <string name="per_hour">per Hour</string>
    <string name="distance_min">per Distance/Min</string>
    <string name="km_away">KM Away</string>
    <string name="service_provider">Service Provider</string>
    <string name="see_more"><u>See more</u></string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="xuber_status">Status</string>
    <string name="xuber_cancel">Cancel</string>
    <string name="finding_drivers_near_by">Finding providers near by</string>
    <string name="xuber_invoice">Invoice</string>
    <string name="xuber_before">Before</string>
    <string name="xuber_after">After</string>
    <string name="xuber_base_fare">Base Fare</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="xuber_tax_fare">Tax fare</string>
    <string name="xuber_hourly_fare">Hourly fare</string>
    <string name="xuber_booking_id">Booking Id</string>
    <string name="dummy_trxn_id">TNX123</string>
    <string name="xuber_tips">Tips</string>
    <string name="xuber_extra_charge">Extra Charges</string>
    <string name="xuber_total">Total</string>
    <string name="xuber_confrim_payment">Confrim Payment</string>
    <string name="xuber_cash">cash</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="price_per_hour">Price/Hr</string>
    <string name="fixed_price">Fixed Price</string>
    <string name="xuber_change">Change</string>
    <string name="cash">CASH</string>
    <string name="card">CARD</string>
    <string name="use_wallet_amount">Use Wallet amount</string>
    <string name="cancel_request_confirm_msg">Are you sure want to cancel the request?</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="instruction">Instruction</string>
    <string name="you_can_upload_img">You can Upload an image</string>
    <string name="xuber_use_this">USE THIS</string>
    <string name="select_img">Please select instruction img</string>
    <string name="enter_inst">Please enter instruction</string>
    <string name="services">Services</string>
    <string name="provider_accept">Provider accepted your request</string>
    <string name="provider_arrived">Provider reached your location</string>
    <string name="provider_pickedup">Started the service</string>
    <string name="provider_completed">Service Completed</string>
    <string name="xuber_submit">Submit</string>
    <string name="xuber_leave_your_comments">write your reviews</string>
    <string name="select_service">Select any service</string>
    <string name="xuber_remove">Remove</string>
    <string name="waiting_for_provider_accept">Waiting for provider accept</string>
    <string name="xuber_tips_amount_label">Enter the amount for tips</string>
    <string name="tips_add">Add</string>
    <string name="serviceflowfragment">ServiceFlowFragment</string>
    <string name="rating">Rating</string>
    <string name="reason">Reason</string>
    <string name="other">other</string>
    <string name="otp">OTP</string>
    <string name="completed">Completed</string>
    <string name="start_timer">00:00:00</string>
    <string name="no_services_found">No services found</string>
    <string name="payment_type">Payment Type</string>
    <string name="waiting_for_payment_confirmation">Waiting for Payment Confirmation</string>
    <string name="select_minimum_quantity">Please select minimum quantity</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="wallet_deduction">Wallet Deduction</string>
    <string name="coupon">Coupon</string>
    <string name="promocode_applied">Promocode Applied</string>
    <string name="rated_success">Rated Successfully</string>


</resources>
