<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="SelectLocationViewModel"
            type="com.gox.xubermodule.ui.activity.selectlocation.SelectLocationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_color">

        <include
            android:id="@+id/subservice_toolbar"
            layout="@layout/toolbar_service_category" />

        <RelativeLayout
            android:id="@+id/loc_lt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_below="@+id/subservice_toolbar"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_9sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_toStartOf="@+id/go_txt"
                android:background="@drawable/rounded_corner_white_bg"
                android:elevation="@dimen/_1sdp"
                android:gravity="center"
                style="@style/MediumText"
                android:text="@string/search_location"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/go_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_9sdp"
                android:background="@drawable/rounded_corner_blue_bg"
                android:elevation="@dimen/_1sdp"
                android:gravity="center"
                android:padding="@dimen/_11sdp"
                android:text="@string/go"
                style="@style/BoldText"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llAddressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loc_lt"
            android:background="@color/app_background_color"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/loc_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_background_color"
                android:padding="@dimen/_8sdp"
                style="@style/MediumText"
                android:text="@string/saved_location"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/rounded_corner_white_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlHomeAddressContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:padding="@dimen/_10sdp"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/ivHome"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/home"
                        android:src="@drawable/ic_taxi_home" />

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivHome"
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvHomeAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvHome"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivHome"
                        android:text="@string/text_placeholder"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlWorkAddressContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:padding="@dimen/_10sdp"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/ivWork"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/work"
                        android:src="@drawable/ic_xuber_work" />

                    <TextView
                        android:id="@+id/tvWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivWork"
                        android:text="@string/work"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvWorkAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvWork"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivWork"
                        android:text="@string/text_placeholder"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
